tests/paczka1/small_fuzzy/33026973.err
Error in line 4: ZmtsBhsU A889 5,0
Error in line 6: A585 A585 70,7
